--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>jquery.tablesorter</artifactId>
+            <version>2.28.5</version>
+        </dependency>
     </dependencies>
 
     <build>
